# ipfs_eth_console

./: .gitignore  Cargo.toml  README.md  config.json  package-lock.json  package.json  truffle-config.js
contracts/: IpfsCid.sol
migrations/: 2_ipfs_cid_migration.js
src/: contract.abi  main.rs  utils.rs
test/: IpfsCid.js
