[package]
name = "ipfs_eth_console"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ipfs-api-backend-actix = "0.3"
futures = "0.3.17"
actix-rt = "2.4.0"
web3 = "0.17.0"
hex-literal = "0.3.4"
hex = "0.4.3"
anyhow = "1.0.42"
serde_json = "1.0.59"
serde = { version = "1.0", features = ["derive"] }
lazy_static = "1.4.0"
multihash = "*"
rust-base58 = "0.0.4"